Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41852

Memory leak in QClipboard:.setMimeData()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0 Beta
    • 5.4.0 Alpha
    • Core: Other
    • None
    • 74a20b77a67ec4d5a8be0f59302075d34151dc05

      In QClipboard::setMimeData(), when the platform does not support the mode passed in, we just return without any feedback to the application. However, the documentation says that the function takes ownership of the data passed in, which means it needs to delete this object before returning, otherwise we will introduce a leak.

        For Gerrit Dashboard: QTBUG-41852
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes