Android: Fix memory leak in QClipboard::setMimeData()

The ownership of the object passed into QClipboard::setMimeData()
is documented to be transferred to the clipboard, but we never
deleted it, thus all these objects would leak.

[ChangeLog][Android] Fixed memory leak in QClipboard::setMimeData()

Change-Id: I43e6bad1071be5f56c219cb9341584edba54d2bd
Task-number: QTBUG-41852
Reviewed-by: BogDan Vatra <bogdan@kde.org>

cregit: 5f1f955524d003af4714e43c19062fa07c1d58f8 https://github.com/qt/qtbase/commit/5f1f955524d003af4714e43c19062fa07c1d58f8